# rpa_project_selenium_python

./: pyproject.toml
src/bots/first_rpa/: main.py  my_rpa.py
src/bots/first_rpa/pages/: google_page.py
src/first_rpa_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rpa_common/base_rpa/: base_rpa_task.py
src/rpa_common/browser/: browser.py  chrome.py  edge.py  firefox.py
src/rpa_common/control/: button.py  control.py  label.py  text_box.py
src/rpa_common/database/: db_connection.py
src/rpa_common/repositories/: base_repository.py  google_search_repository.py
src/rpa_common/services/: two_captcha_solver.py
src/rpa_common/session/: session.py
