[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first_rpa_project"
version = "1.0.0"
description = "RPA Project with Selenium"
requires-python = ">=3.7"  # Versión mínima de Python
authors = [
    { name="Gerson Andrade", email="g.gerson51@gmail.com" }
]
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["first_rpa", "rpa_common"]

[project.scripts]
first_rpa = "bots.first_rpa.__main__:main"
